Adding the index.html file with initial elements and user UI code

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 
-  <div class="page-titles">
-    <h1>COUNTious</h1>
-    <h2>Awareness Counter</h2>
-  </div>
   
-  <main>
+  <main class="counter-ui">
+    <div class="page-titles">
+      <h1>COUNTious</h1>
+      <h2>Awareness Counter</h2>
+    </div>
+
     <section class="header" id="header">
       <input type="text" name="counter-title" id="counter-title" placeholder="Water bottles"/>
     </section>
