--- a/index.html
+++ b/index.html
@@ -4,30 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COUNTious - Awareness Counter</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <!-- Fonts -->
+  <!-- Titles - Special Gothic Expanded One -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text:ital@0;1&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+  <!-- DM Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  
   <main class="counter-ui">
-    <div class="page-titles">
-      <h1>COUNTious</h1>
-      <h2>Awareness Counter</h2>
+    <div class="container">
+      <div class="page-titles-wrapper">
+        <h1>COUNTious</h1>
+        <h2>Awareness Counter</h2>
+      </div>
+  
+      <section class="header" id="header">
+        <input type="text" name="counter-title" id="counter-title" placeholder="Water bottles"/>
+      </section>
+  
+      <section class="counter">
+        <button class="button" id="subtract-btn">-</button>
+        <span class="counter-number-display" id="counter-number-display">00</span>
+        <button class="button" id="add-btn">+</button>
+      </section>
+  
+      <section class="footer" id="footer">
+        <button class="button" id="reset-btn">Reset</button>
+      </section>
     </div>
-
-    <section class="header" id="header">
-      <input type="text" name="counter-title" id="counter-title" placeholder="Water bottles"/>
-    </section>
-
-    <section class="counter">
-      <button class="button" id="subtract-btn">-</button>
-      <span class="counter-number-display" id="counter-number-display">00</span>
-      <button class="button" id="add-btn">+</button>
-    </section>
-
-    <section class="footer" id="footer">
-      <button class="button" id="reset-btn">Reset</button>
-    </section>
   </main>
 
   <script src="script.js"></script>
