Adding a descriptive paragraph above the counter title

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
 
     <section class="header" id="header">
+      <p>A counter for:</p>
       <input type="text" name="counter-title" id="counter-title" placeholder="Water bottles"/>
     </section>
 
