Creting the basic functionality of the counter on the script.js file

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
     <div class="container">
   
       <!-- Counter Title -->
-      <div class="wrapper flex-center counter-header-wrapper" id="counter-header-wrapper">
+      <div class="wrapper flex-center counter-header-wrapper">
         <input 
           type="text" 
           name="counter-title" 
-          class="counter-title" 
-          id="counter-title" 
+          class="counter-title"
           placeholder="E.g.: Water bottles"
         />
       </div>
@@ -43,7 +42,7 @@
       <!-- Counter Number display and "+" and "-" buttons -->
       <div class="wrapper flex-center counter-main-wrapper">
         <button class="button" id="subtract-btn">-</button>
-        <span class="counter-number-display" id="counter-number-display">00</span>
+        <span class="counter-number-display" id="counter-number-display">0</span>
         <button class="button" id="add-btn">+</button>
       </div>
   
