Improvements on the website responsivity

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="https://kit.fontawesome.com/11d87b1501.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <main>
+  <main class="flex-center">
 
     <!-- Global header -->
     <div class="wrapper global-header-wrapper">
